@@ -9,22 +9,22 @@ public class LeafData extends DataClass {
 
   public String toString() {
      String s;
-     s="[ "+ (new Integer(myRid.pageNo.pid)).toString() +" "
-              + (new Integer(myRid.slotNo)).toString() + " ]";
+     s="[ "+ (Integer.valueOf(myRid.pageNo.pid)) +" "
+              + (Integer.valueOf(myRid.slotNo)) + " ]";
      return s;
   }
 
   /** Class constructor
    *  @param    rid  the data rid
    */
-  LeafData(RID rid) {myRid= new RID(rid.pageNo, rid.slotNo);};  
+  LeafData(RID rid) {myRid= new RID(rid.pageNo, rid.slotNo);}
 
-  /** get a copy of the rid
+    /** get a copy of the rid
   *  @return the reference of the copy 
   */
-  public RID getData() {return new RID(myRid.pageNo, myRid.slotNo);};
+  public RID getData() {return new RID(myRid.pageNo, myRid.slotNo);}
 
-  /** set the rid
+    /** set the rid
    */ 
-  public void setData(RID rid) { myRid= new RID(rid.pageNo, rid.slotNo);};
+  public void setData(RID rid) { myRid= new RID(rid.pageNo, rid.slotNo);}
 }   
